# simple-ecommerce-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ecommerce/: ecommerce_db  manage.py
ecommerce/ecommerce/: settings.py
