[tool.poetry]
name = "simple-ecommerce-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "simple_ecommerce_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 79

[tool.black]
line_length = 79
